--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 altgraph==0.17.2
+black==22.8.0
+click==8.1.3
+colorama==0.4.5
 future==0.18.2
+mypy-extensions==0.4.3
+pathspec==0.10.1
 pefile==2022.5.30
+platformdirs==2.5.2
 pyinstaller==5.3
 pyinstaller-hooks-contrib==2022.8
 pywin32-ctypes==0.2.0
+tomli==2.0.1
+typing_extensions==4.3.0
